# Concorrentes

./: .gitignore  CMakeLists.txt  hybrid-hello.c  main.c
src/: CMakeLists.txt  main.c  t2_ps
tests/: CMakeLists.txt
